--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "author": "Sergej Samsonenko",
   "version": "4.4.1",
   "license": "MIT",
+  "config": {
+    "store": "[enter store url]"
+  },
   "scripts": {
     "start": "run-p -sr shopify:serve webpack:watch",
-    "deploy": "run-s webpack:build && cd shopify && shopify theme push",
-    "deploy:new": "run-s webpack:build && cd shopify && shopify theme push --unpublished",
+    "deploy": "run-s webpack:build && shopify theme push --store $npm_package_config_store --path shopify",
+    "deploy:new": "run-s webpack:build && shopify theme push --store $npm_package_config_store --path shopify --unpublished",
     "webpack:watch": "cross-env NODE_ENV=development BROWSERSLIST_ENV=development BROWSERSLIST_CONFIG=.config/.browserslistrc webpack --config .config/webpack/webpack.dev.js --watch --progress",
     "webpack:build": "cross-env NODE_ENV=production BROWSERSLIST_ENV=production BROWSERSLIST_CONFIG=.config/.browserslistrc webpack --config .config/webpack/webpack.prod.js --progress",
-    "shopify:serve": "cd shopify && shopify theme serve",
-    "shopify:pull": "cd shopify && shopify theme pull",
+    "shopify:serve": "shopify theme dev --store $npm_package_config_store --path shopify",
+    "shopify:pull": "shopify theme pull --store $npm_package_config_store --path shopify",
     "lint": "run-s -c lint:*",
     "lint:js": "eslint src/**/*.js --config .config/.eslintrc.js",
     "lint:css": "stylelint src/**/*.{css,sass,scss} --config .config/.stylelintrc.js",
@@ -20,10 +23,6 @@
     "fix:js": "eslint src/**/*.js --config .config/.eslintrc.js --fix",
     "fix:css": "stylelint src/**/*.{css,sass,scss} --config .config/.stylelintrc.js --fix",
     "fix:shopify": "cd shopify && shopify theme check -a"
-  },
-  "dependencies": {
-    "alpinejs": "^3.10.5",
-    "tailwindcss": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
